--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ mekanism_version=1.20.1-10.4.8.43
 jei_version=15.3.0.8
 
 mod_id=singularity
-mod_name=Wolfie's Singularity Reactor
+mod_name=Wolfie\'s Singularity Reactor
 mod_license=MIT
 mod_version=1.0.0
 mod_group_id=dev.wolfieboy09.singularityreactor
