--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ mapping_version=2023.09.03-1.20.1
 
 mekanism_version=1.20.1-10.4.8.43
 jei_version=15.3.0.8
+emi_version=1.1.7+1.20.1
 
 mod_id=singularity
 mod_name=Wolfie's Singularity Reactor
