--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,31 +1,40 @@
 modLoader="javafml" #mandatory
 loaderVersion="${loader_version_range}"
 license="${mod_license}"
-#issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/"
-[[mods]] #mandatory
-modId="singularity" #mandatory
-version="${mod_version}" #mandatory
-displayName="${mod_name}" #mandatory
+issueTrackerURL="https://github.com/wolfieboy09/WolfiesSingularityReactor/issues"
+[[mods]]
+modId="singularity"
+version="${mod_version}"
+displayName="${mod_name}"
+
 # A URL to query for updates for this mod. See the JSON update specification https://docs.minecraftforge.net/en/latest/misc/updatechecker/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 #logoFile="singularity.png" #optional
-# A text field displayed in the mod UI
-#credits="" #optional
-authors="${mod_authors}" #optional
+
+credits="drScalezz for helping out make it"
+
+authors="Wolfieboy09"
 description='''${mod_description}'''
-[[dependencies.singularity]] #optional
-    modId="forge" #mandatory
-    mandatory=true #mandatory
-    versionRange="${forge_version_range}" #mandatory
+[[dependencies.singularity]]
+    modId="forge"
+    mandatory=true
+    versionRange="${forge_version_range}"
     ordering="NONE"
     side="BOTH"
-# Here's another dependency
+
 [[dependencies.singularity]]
     modId="minecraft"
     mandatory=true
     versionRange="${minecraft_version_range}"
     ordering="NONE"
+    side="BOTH"
+
+[[dependencies.singularity]]
+    modId="mekanism"
+    mandatory=true
+    versionRange="[1.20.1-10.4.8.43,)"
+    ordering="BEFORE"
     side="BOTH"
