Remove Mekanism: Generators - Not needed as of now

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                "${mod_id}" {
+                "singularity" {
                     source sourceSets.main
                 }
             }
@@ -88,7 +88,7 @@ dependencies {
 
     compileOnly "mekanism:Mekanism:${mekanism_version}:api"
     runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
-    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+    // runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
 
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"))
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
