Changed class path from "SingularityReactor" to "Singularity" just because

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@ mod_id=singularity
 mod_name=Wolfie's Singularity Reactor
 mod_license=MIT
 mod_version=1.0.0
-mod_group_id=dev.wolfieboy09.singularityreactor
+mod_group_id=dev.wolfieboy09.singularity
 mod_authors=Wolfieboy09
 mod_description=My singularity reactor for Mekanism!
