Did a bunch of stuff

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,10 @@ repositories {
         name = "ModMaven"
         url = "https://modmaven.dev"
     }
+    maven {
+        name = "Wolfie's Maven"
+        url = "https://dl.cloudsmith.io/public/wolfieboy09/wolfieslib/maven/"
+    }
 }
 
 dependencies {
@@ -80,6 +84,7 @@ dependencies {
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"))
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
     runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
+    implementation fg.deobf("dev.wolfieboy09.wolfieslib:WolfiesLib:${wolfieslib_version}")
 }
 
 tasks.named('processResources', ProcessResources).configure {
