--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,9 @@ mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
 
 jei_version=15.3.0.8
-emi_version=1.1.7+1.20.1
+
+wolfieslib_version=1.0.0
+wolfieslib_version_range=[*,)
 
 mod_id=singularity
 mod_name=Wolfie's Singularity Reactor
