--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ mod_license=MIT
 mod_version=1.0.0
 mod_group_id=dev.wolfieboy09.singularity
 mod_authors=Wolfieboy09
-mod_description=My singularity reactor for Mekanism!
+mod_description=Your energy solution to the tech mod your using
