--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ mapping_version=2023.09.03-1.20.1
 
 jei_version=15.8.0.16
 
-wolfieslib_version=1.0.0
-wolfieslib_version_range=[*,)
+wolfieslib_version=1.0.1
+wolfieslib_version_range=[1.0.0,)
 
 mod_id=singularity
 mod_name=Wolfie's Singularity Reactor
