--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,10 @@ jei_version=15.8.0.16
 wolfieslib_version=1.0.1
 wolfieslib_version_range=[1.0.1,)
 
+# for compatibility
+cctVersion=1.112.0
+
+
 mod_id=singularity
 mod_name=Wolfie's Singularity Reactor
 mod_license=MIT
